--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -22,6 +22,17 @@ jobs:
         ports:
           - 6379:6379
 
+      mysql:
+        image: mysql:8
+        env:
+          MYSQL_ROOT_PASSWORD: root_password
+          MYSQL_DATABASE: testdb
+          MYSQL_USER: test_user
+          MYSQL_PASSWORD: test_password
+        ports:
+          - "3306:3306"
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -79,9 +90,12 @@ jobs:
         with:
           files: ./member-api/src/test/resources/application.yml
         env:
-          spring.datasource.url: ${{ secrets.TEST_DB_URL }}
-          spring.datasource.username: ${{ secrets.TEST_DB_HOST }}
-          spring.datasource.password: ${{ secrets.TEST_DB_PASSWORD }}
+          TEST_DB_URL: jdbc:mysql://localhost:3306/testdb
+          TEST_DB_HOST: test_user
+          TEST_DB_PASSWORD: test_password
+          # spring.datasource.url: ${{ secrets.TEST_DB_URL }}
+          # spring.datasource.username: ${{ secrets.TEST_DB_HOST }}
+          # spring.datasource.password: ${{ secrets.TEST_DB_PASSWORD }}
           spring.security.jwt.secret: ${{ secrets.JWT_SECRET_KEY }}
           spring.data.mongodb.uri: ${{ secrets.MONGO_TEST_URI }}
           custom.domain.image.baseUrl: ${{ secrets.BASE_URL }}
