[bugfix] image 검증 로직 추가

--- a/member-api/src/main/resources/application.yml
+++ b/member-api/src/main/resources/application.yml
@@ -27,11 +27,11 @@ spring:
       fail-on-empty-beans: false
   # <====
 
-  ## file upload max size (파일 업로드 크기 설정)
-  #  servlet:
-  #    multipart:
-  #      max-file-size: 20MB
-  #      max-request-size: 20MB
+  # file upload max size (파일 업로드 크기 설정)
+    servlet:
+      multipart:
+        max-file-size: 3MB
+        max-request-size: 3MB
 
 
   redis:
