--- a/member-api/build.gradle
+++ b/member-api/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+    implementation 'org.mapstruct:mapstruct:1.4.2.Final'
 
 
     //QueryDSL
@@ -53,6 +54,7 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
 
     annotationProcessor 'org.projectlombok:lombok'
+    annotationProcessor "org.mapstruct:mapstruct-processor:1.4.2.Final"
 
     //S3
     implementation 'io.awspring.cloud:spring-cloud-starter-aws:2.3.1'
