--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,8 +1,9 @@
 name: Java CI with Gradle V0.1
 
 on:
-  pull_request_target:
-    types: [ opened, reopened, synchronize, labeled ]
+  pull_request: 
+    branches : [ develop ]
+    # types: [ opened, reopened, synchronize, labeled ]
 
 permissions:
   contents: read
