refactor : 비속어 필터링용 커스텀 어노테이션 추가 (BadWordFilter)

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -21,6 +21,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
+    //User Language Filter
+    implementation 'io.github.vaneproject:badwordfiltering:1.0.0'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
     compileOnly 'org.projectlombok:lombok'
