[feature] 모각코 & 모각코 댓글 CRUD

--- a/member-api/build.gradle
+++ b/member-api/build.gradle
@@ -54,6 +54,9 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
 
     annotationProcessor 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.1.0'
+
+    annotationProcessor "org.mapstruct:mapstruct:1.4.2.Final"
     annotationProcessor "org.mapstruct:mapstruct-processor:1.4.2.Final"
 
     //S3
