--- a/member-api/build.gradle
+++ b/member-api/build.gradle
@@ -45,6 +45,7 @@ dependencies {
 
     //Security
     implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 
     implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
 
