feat: api 호출을 위한 feignclient 설정 추가

--- a/member-api/build.gradle
+++ b/member-api/build.gradle
@@ -83,11 +83,13 @@ dependencies {
     //kafka
     implementation 'org.springframework.kafka:spring-kafka'
 
+    //FeignClient
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.1.0'
+
     //Test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
-
     testImplementation 'com.h2database:h2'
 }
 
