feat: 챗 지피티 API key 설정 추가

--- a/member-api/src/main/resources/application.yml
+++ b/member-api/src/main/resources/application.yml
@@ -83,6 +83,10 @@ custom:
     image:
       baseUrl: ${BASE_URL}
 
+chatgpt:
+  rest-api-key: ${CHAT_GPT_API_KEY}
+  chat-api-url: https://api.openai.com/v1/chat/completions
+
 management:
   endpoints:
     web:
