--- a/member-api/src/main/resources/application.yml
+++ b/member-api/src/main/resources/application.yml
@@ -53,8 +53,8 @@ spring:
       client:
         registration:
           github:
-            client-id: 500e3ee74e74b383d745
-            client-secret: f05f3cf1564a0193548ec9cb428805861b3a82e9
+            client-id: ${GITHUB_SOCIAL_CLIENT_ID}
+            client-secret: ${GITHUB_SOCIAL_CLIENT_SECRET}
             redirect-uri: http://localhost:8501/login/oauth2/code/github
             scope:
               - user:email
