--- a/domain-mysql/src/main/resources/application.yml
+++ b/domain-mysql/src/main/resources/application.yml
@@ -1,4 +1,8 @@
 spring:
+  config:
+    activate:
+      on-profile: local-db
+
   datasource:
     url: ${LOCAL_DB_URL}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&characterEncoding=UTF-8
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -6,7 +10,6 @@ spring:
     password: ${LOCAL_DB_PASSWORD}
 
   jpa:
-
     hibernate:
       ddl-auto: none
 
@@ -23,12 +26,6 @@ spring:
   jackson:
     property-naming-strategy: SNAKE_CASE
 
-  ## file upload max size (파일 업로드 크기 설정)
-  #  servlet:
-  #    multipart:
-  #      max-file-size: 20MB
-  #      max-request-size: 20MB
-
   flyway:
     enabled: true
     baseline-on-migrate: true
@@ -38,3 +35,48 @@ logging.level:
   org.hibernate.SQL: debug
   #  org.hibernate.type: trace
   org.springframework.security: debug
+
+dbInfo: rds
+
+---
+
+spring:
+  config:
+    activate:
+      on-profile: prod-db
+
+  datasource:
+    url: ${LOCAL_DB_URL}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&characterEncoding=UTF-8
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: ${LOCAL_DB_HOST}
+    password: ${LOCAL_DB_PASSWORD}
+
+  jpa:
+    hibernate:
+      ddl-auto: none
+
+    properties:
+      hibernate:
+        format_sql: true
+
+    database: mysql
+
+    database-platform: org.hibernate.dialect.MySQL8Dialect
+
+  #    show-sql: true
+
+  jackson:
+    property-naming-strategy: SNAKE_CASE
+
+  flyway:
+    enabled: true
+    baseline-on-migrate: true
+    out-of-order: true
+
+  dbInfo: rds
+
+logging.level:
+  org.hibernate.SQL: debug
+  #  org.hibernate.type: trace
+  org.springframework.security: debug
+
