--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -113,7 +113,7 @@ jobs:
           script: |
             docker pull ${{ secrets.DOCKERHUB_USERNAME }}/kernelsquare
             docker-compose up -d
-        if: ${{ env.STOPPED_IP == secrets.BLUE_IP }}
+        if: ${{ env.TARGET_UPSTREAM == 'blue' }}
 
       - name: Execute Server Docker compose
         uses: appleboy/ssh-action@master
@@ -125,7 +125,7 @@ jobs:
           script: |
             docker pull ${{ secrets.DOCKERHUB_USERNAME }}/kernelsquare
             docker-compose up -d
-        if: ${{ env.STOPPED_IP != secrets.BLUE_IP }}
+        if: ${{ env.TARGET_UPSTREAM == 'green' }}
 
       - name: Check the deployed prod1 service URL
         uses: jtalk/url-health-check-action@v3
@@ -169,7 +169,7 @@ jobs:
             docker stop prod2
             docker rm prod1
             docker rm prod2
-        if: ${{ env.STOPPED_IP == secrets.BLUE_IP }}
+        if: ${{ env.TARGET_UPSTREAM == 'blue' }}
 
       # 기존 인스턴스 중단
       - name: Terminate prev instance
@@ -184,7 +184,7 @@ jobs:
             docker stop prod2
             docker rm prod1
             docker rm prod2
-        if: ${{ env.STOPPED_IP != secrets.BLUE_IP }}
+        if: ${{ env.TARGET_UPSTREAM == 'green' }}
 
 #      # 깃허브 러너 아이피를 인바운드 룰에서 제거
 #      - name: Remove Github Actions IP from security group
