--- a/member-api/Dockerfile
+++ b/member-api/Dockerfile
@@ -3,6 +3,6 @@ FROM openjdk:21-jdk
 ARG PROFILES
 ARG ENV
 
-COPY member-api/build/libs/member-api-0.0.1-SNAPSHOT.jar app.jar
+COPY build/libs/member-api-0.0.1-SNAPSHOT.jar app.jar
 
-ENTRYPOINT ["java", "-Dspring.profiles.active=${PROFILES}", "-Dserver.env=${ENV}", "-jar", "/app.jar"]
+ENTRYPOINT ["java", "-Dspring.profiles.active=${PROFILES}", "-Dserver.env=${ENV}", "-jar", "app.jar"]
