setting: 무중단 배포를 위한 cd 워크플로우 수정 19차

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -234,7 +234,8 @@ jobs:
         with:
           username: ${{ secrets.SSH_USER }}
           host: ${{ env.CURRENT_IP }}
-          key: ${{ secrets.BLUE_SSH_KEY }}
+#          key: ${{ secrets.BLUE_SSH_KEY }}
+          password: ${{ secrets.SSH_PASSWORD }}
           script_stop: true
           script: |
             docker stop prod1
