--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -202,17 +202,14 @@ jobs:
           max-attempts: 5 # Optional, defaults to 1
           retry-delay: 30s # Optional, only applicable to max-attempts > 1
 #
-#      - name: Check the deployed prod2 service URL
-#        uses: jtalk/url-health-check-action@v3
-#        with:
-#          url: http://${{ env.STOPPED_IP }}:8502/environment
-#          # 총 5번 하는데, 15초의 간격을 두고함. 이때까지 응답이 정상이 아니라면 배포 실패
-#          max-attempts: 5 # Optional, defaults to 1
-#          retry-delay: 15s # Optional, only applicable to max-attempts > 1
+      - name: Check the deployed prod2 service URL
+        uses: jtalk/url-health-check-action@v3
+        with:
+          url: http://${{ env.STOPPED_IP }}:8502/environment
+          # 총 5번 하는데, 15초의 간격을 두고함. 이때까지 응답이 정상이 아니라면 배포 실패
+          max-attempts: 5 # Optional, defaults to 1
+          retry-delay: 30s # Optional, only applicable to max-attempts > 1
 
-#      - run: |
-#          TARGET=$(curl --fail -sv --retry 5 --retry-delay 15 --retry-connrefused http://${{ env.STOPPED_IP }}:8501/environment)
-#          echo $TARGET
 
       # 엔진엑스의 프록시 변경
       - name: Change nginx upstream
