fix: change name GITHUB_SOCIAL_CLIENT_ID -> SOCIAL_GITHUB_CLIENT_ID ** Secret 도 마찬가지

--- a/member-api/src/main/resources/application.yml
+++ b/member-api/src/main/resources/application.yml
@@ -75,8 +75,8 @@ spring:
       client:
         registration:
           github:
-            client-id: ${GITHUB_SOCIAL_CLIENT_ID}
-            client-secret: ${GITHUB_SOCIAL_CLIENT_SECRET}
+            client-id: ${SOCIAL_GITHUB_CLIENT_ID}
+            client-secret: ${SOCIAL_GITHUB_CLIENT_SECRET}
             redirect-uri: http://localhost:8501/login/oauth2/code/github
             scope:
               - user:email
