setting: tempo 세팅을 위한 yml 수정

--- a/member-api/src/main/resources/application.yml
+++ b/member-api/src/main/resources/application.yml
@@ -128,7 +128,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: prometheus, health, info, metrics
+        include: prometheus, health, info, metrics, tempo
 
 ---
 
