test: 알림 서버 모듈 분리에 따른 테스트 코드 수정

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ admin-api/logs/**
 alert-api/logs/**
 member-api/member-api/logs/**
 admin-api/admin-api/logs/**
+alert-api/alert-api/logs/**
 
 ### STS ###
 .apt_generated
